cmake_minimum_required(VERSION 3.9)
project(protobuf-ios)

set(libprotobuf_files
        google/protobuf/stubs/atomicops_internals_x86_gcc.cc
        google/protobuf/stubs/atomicops_internals_x86_msvc.cc
        google/protobuf/stubs/common.cc
        google/protobuf/stubs/once.cc
        google/protobuf/stubs/hash.h
        google/protobuf/stubs/map_util.h
        google/protobuf/stubs/shared_ptr.h
        google/protobuf/stubs/stringprintf.cc
        google/protobuf/stubs/stringprintf.h
        google/protobuf/extension_set.cc
        google/protobuf/generated_message_util.cc
        google/protobuf/message_lite.cc
        google/protobuf/repeated_field.cc
        google/protobuf/wire_format_lite.cc
        google/protobuf/io/coded_stream.cc
        google/protobuf/io/coded_stream_inl.h
        google/protobuf/io/zero_copy_stream.cc
        google/protobuf/io/zero_copy_stream_impl_lite.cc
        google/protobuf/stubs/strutil.cc
        google/protobuf/stubs/strutil.h
        google/protobuf/stubs/substitute.cc
        google/protobuf/stubs/substitute.h
        google/protobuf/stubs/structurally_valid.cc
        google/protobuf/descriptor.cc
        google/protobuf/descriptor.pb.cc
        google/protobuf/descriptor_database.cc
        google/protobuf/dynamic_message.cc
        google/protobuf/extension_set_heavy.cc
        google/protobuf/generated_message_reflection.cc
        google/protobuf/message.cc
        google/protobuf/reflection_ops.cc
        google/protobuf/service.cc
        google/protobuf/text_format.cc
        google/protobuf/unknown_field_set.cc
        google/protobuf/wire_format.cc
        google/protobuf/io/gzip_stream.cc
        google/protobuf/io/printer.cc
        google/protobuf/io/strtod.cc
        google/protobuf/io/tokenizer.cc
        google/protobuf/io/zero_copy_stream_impl.cc
        google/protobuf/compiler/importer.cc
        google/protobuf/compiler/parser.cc
        )

set(libprotobuf_includes
        google/protobuf/stubs/atomicops.h
        google/protobuf/stubs/atomicops_internals_arm_gcc.h
        google/protobuf/stubs/atomicops_internals_arm64_gcc.h
        google/protobuf/stubs/atomicops_internals_arm_qnx.h
        google/protobuf/stubs/atomicops_internals_atomicword_compat.h
        google/protobuf/stubs/atomicops_internals_generic_gcc.h
        google/protobuf/stubs/atomicops_internals_macosx.h
        google/protobuf/stubs/atomicops_internals_mips_gcc.h
        google/protobuf/stubs/atomicops_internals_pnacl.h
        google/protobuf/stubs/atomicops_internals_tsan.h
        google/protobuf/stubs/atomicops_internals_x86_gcc.h
        google/protobuf/stubs/atomicops_internals_x86_msvc.h
        google/protobuf/stubs/common.h
        google/protobuf/stubs/platform_macros.h
        google/protobuf/stubs/once.h
        google/protobuf/stubs/stl_util.h
        google/protobuf/stubs/template_util.h
        google/protobuf/stubs/type_traits.h
        google/protobuf/descriptor.h
        google/protobuf/descriptor.pb.h
        google/protobuf/descriptor_database.h
        google/protobuf/dynamic_message.h
        google/protobuf/extension_set.h
        google/protobuf/generated_enum_reflection.h
        google/protobuf/generated_message_util.h
        google/protobuf/generated_message_reflection.h
        google/protobuf/message.h
        google/protobuf/message_lite.h
        google/protobuf/reflection_ops.h
        google/protobuf/repeated_field.h
        google/protobuf/service.h
        google/protobuf/text_format.h
        google/protobuf/unknown_field_set.h
        google/protobuf/wire_format.h
        google/protobuf/wire_format_lite.h
        google/protobuf/wire_format_lite_inl.h
        google/protobuf/io/coded_stream.h
        google/protobuf/io/printer.h
        google/protobuf/io/strtod.h
        google/protobuf/io/tokenizer.h
        google/protobuf/io/zero_copy_stream.h
        google/protobuf/io/zero_copy_stream_impl.h
        google/protobuf/io/zero_copy_stream_impl_lite.h
        google/protobuf/compiler/code_generator.h
        google/protobuf/compiler/command_line_interface.h
        google/protobuf/compiler/importer.h
        google/protobuf/compiler/parser.h
        google/protobuf/compiler/plugin.h
        google/protobuf/compiler/plugin.pb.h
        google/protobuf/compiler/cpp/cpp_generator.h
        google/protobuf/compiler/java/java_generator.h
        google/protobuf/compiler/python/python_generator.h
        protbuf.config.h)

set(OUT_DIR ${PROJECT_SOURCE_DIR}/release)
set(LIBRARY_OUTPUT_PATH ${OUT_DIR})
add_library(protobuf ${libprotobuf_files} ${libprotobuf_includes})

target_include_directories(protobuf PUBLIC .)
